[tool.pdm]

[project]
name = "pypotlib"
version = "0.0.4"
description = "Python bindings and ASE adapters for potlib"
authors = [
    {name = "Rohit Goswami", email = "rog32@hi.is"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["wheel", "setuptools", "pybind11", "meson-python"]
build-backend = "mesonpy"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
environment = { RUNNER_OS="Linux" }
before-all = """
    pip install meson cmake &&
    meson wrap install pybind11
"""
test-command = "echo 'installed'"
# XXX: This shouldn't be empty, --lib-sdir .
# Normally is auditwheel repair -w {dest_dir} {wheel}
repair-wheel-command = ""

[tool.cibuildwheel.macos]
environment = { RUNNER_OS="macOS" }
before-all = "brew install gfortran && brew unlink gfortran && brew link gfortran"
# [[tool.cibuildwheel.overrides]]
# select = "*-musllinux*"
# before-all = "apk add mylib" # hasn't got new enough Eigen versions, uses Apline 3.12
