[tool.pdm]

[project]
name = "pypotlib"
version = "0.0.6"
description = "Python bindings and ASE adapters for potlib"
authors = [
    {name = "Rohit Goswami", email = "rog32@hi.is"},
]
# These are only if ase integration is requested, consider a group
dependencies = [
    "numpy>=1.24.2",
    "ase>=3.22.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Source Code" = "https://github.com/TheochemUI/pypotlib"
"Bug Tracker" = "https://github.com/TheochemUI/pypotlib/issues"

[build-system]
requires = ["wheel", "setuptools", "pybind11", "meson-python"]
build-backend = "mesonpy"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
environment = { RUNNER_OS="Linux" }
before-all = """
    pip install meson cmake &&
    meson wrap install pybind11
"""
test-command = "echo 'installed'"
# XXX: This shouldn't be empty, --lib-sdir .
# Normally is auditwheel repair -w {dest_dir} {wheel}
repair-wheel-command = ""
# Openblas for musllinux is painful, so don't install / test
test-skip = "*-musllinux*"

[tool.cibuildwheel.macos]
environment = { RUNNER_OS="macOS" }
before-all = "brew install gfortran && brew unlink gfortran && brew link gfortran"

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.1.0",
]

[tool.pdm.scripts]
lint = "black"
all = {composite = ["lint pypotlib/"]}

[tool.black]
line-length = 80
target-version = ['py310']
