[tool.pdm]

[project]
name = "pypotlib"
version = "0.0.13"
description = "Python bindings and ASE adapters for potlib"
authors = [
    {name = "Rohit Goswami", email = "rog32@hi.is"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Source Code" = "https://github.com/TheochemUI/pypotlib"
"Bug Tracker" = "https://github.com/TheochemUI/pypotlib/issues"

[build-system]
requires = ["pybind11", "meson-python"]
build-backend = "mesonpy"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
environment = { RUNNER_OS="Linux" }
test-command = "echo 'installed'"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
# Openblas for musllinux is painful, so don't install / test
test-skip = "*-musllinux*"

[tool.cibuildwheel.macos]
environment = { RUNNER_OS="macOS" }
before-all = "brew install gfortran && brew unlink gfortran && brew link gfortran"

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.1.0",
]

[tool.pdm.scripts]
lint = "black"
all = {composite = ["lint pypotlib/"]}

[tool.black]
line-length = 80
target-version = ['py310']

[tool.meson-python.args]
setup = ['-Dxxhash:cli=false']
